# dbt-fusion

./: CHANGELOG.md  Cargo.toml
.changes/unreleased/: Fixes-20260105-221701.yaml
.github/workflows/: duckdb-test.yml
crates/dbt-adapter/src/: adapter_engine.rs  base_adapter.rs  bridge_adapter.rs  cache.rs  cast_util.rs  factory.rs  funcs.rs  information_schema.rs  lib.rs  load_store.rs  query_ctx.rs  record_and_replay.rs  response.rs  sidecar_adapter.rs  sidecar_client.rs  sql_types.rs  typed_adapter.rs
crates/dbt-adapter/tests/: duckdb_jinja.rs  duckdb_macro_tests.rs  duckdb_roundtrip.rs  duckdb_smoke.rs
crates/dbt-agate/src/: column.rs  columns.rs  data_type.rs  flat_record_batch.rs  lib.rs  row.rs  rows.rs  table.rs  table_set.rs  vec_of_rows.rs
crates/dbt-auth/src/: lib.rs  sidecar.rs
crates/dbt-common/: Cargo.toml
crates/dbt-common/src/: adapter.rs  behavior_flags.rs  constants.rs  io_args.rs  macros.rs  serde_utils.rs
crates/dbt-deps/src/: github_client.rs  private_package.rs
crates/dbt-error/src/: adapter_errors.rs  codes.rs  types.rs
crates/dbt-features/: Cargo.toml  README.md
crates/dbt-features/src/: feature_stack.rs  formatter.rs  linter.rs  mod.rs  sa.rs
crates/dbt-frontend-common/src/: dialect.rs  lib.rs  named_reference.rs
crates/dbt-init/src/: profile_setup.rs
crates/dbt-jinja-utils/src/: invocation_args.rs  (+5 more)
crates/dbt-loader/: Cargo.toml
crates/dbt-sa-cli/: Cargo.toml
crates/dbt-test-utils/: Cargo.toml
crates/dbt-tui-progress/: Cargo.toml  README.md
crates/dbt-tui-progress/src/: bar.rs  controller.rs  lib.rs  styles.rs
(+163 files in other folders)
